tests/typing/should_fail/op_primitive.java
package tutu.titi.toto;

class A {
	int j;

	public int method1() {
		int h = 3;
		return h;
	}
}
